#==============================================================================
# Cmake file for compiling the OS6 operating system apps
#==============================================================================

project(false)

set(APP_NAME false)

add_executable(${APP_NAME} "")

include("../user_apps_c.cmake")

#==============================================================================
# Flags and compiler configuration
#==============================================================================

#==============================================================================
# Path macros
#==============================================================================

#==============================================================================
# Includes and dependencies
#==============================================================================

#==============================================================================
# Sources
#==============================================================================

target_sources(${APP_NAME} PRIVATE false.c)

#==============================================================================
# End of file
#==============================================================================